# grpc-rust-pl

./: Cargo.toml  README.md
.github/workflows/: build.yml
proto/: payments.proto
src/: client.rs  server.rs
