[package]
name = "grpc_pl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "payments-server"
path = "src/server.rs"

[[bin]]
name = "payments-client"
path = "src/client.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.3.19", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.2"
